--- a/DefaultSettings.ini
+++ b/DefaultSettings.ini
@@ -11,6 +11,10 @@ User =
 Pass =
 Channels = #ahkscript,#botters-test
 
+[Plugins]
+BindAddr = 127.0.0.1
+BindPort = 33807
+
 [Bitly]
 login =
 apiKey =
